# beamme

./: .gitignore  .gitmodules  README.md  jupytext.toml  perf.py  pyproject.toml  test.py  test_times.py
.binder/: Dockerfile
.github/workflows/: build_sdist_build_test_wheels_nightly_and_publish_release.yml  documentation.yml  testing.yml  testing_protected.yml  website.yml
.jupyter/: jupyter_server_config.py
examples/: ex1.py  example_1_finite_rotations.ipynb  example_2_core_mesh_generation_functions.ipynb  example_3.ipynb
examples/utils/: example_1_utils.py  general_utils.py  lecture_utils.py
meshpy/: __init__.py  conf.py  rotation.py  utility.py
meshpy/cpp/: CMakeLists.txt
meshpy/cpp/src/: find_close_nodes.H  find_close_nodes.cpp  meshpy_cpp.cpp
meshpy/four_c/: run_four_c.py
meshpy/geometric_search/: find_close_points.py
meshpy/mesh_creation_functions/: beam_curve.py
tests/: conftest.py  conftest_performance_tests.py  conftest_result_comparison.py  conftest_test_object_generators.py  create_test_models.py  test_ansys.py  test_beamme.py  test_four_c_simulation.py  testing_baci.py  testing_four_c.py  testing_four_c_simulation.py  testing_geometric_search.py  testing_main.py  testing_mesh_creation_functions.py  testing_meshpy.py  testing_nurbs.py  testing_rotations.py  testing_utility.py  utils.py
tests/integration/: test_integration_abaqus.py  test_integration_core_geometry_sets.py  test_integration_core_mesh.py  test_integration_four_c.py  (+12 more)
tutorial/: Untitled.ipynb
utils/: check_python_imports.py  logo.py
website/: README.md  requirements.txt
(+162 files in other folders)
